[metadata]
name = tidytwitter
version = 0.1.8
description = Delete your old tweets and favorites using the Twitter API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikepqr/tidytwitter
author = Mike Lee Williams
author_email = mike@mike.place
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords = twitter
project_urls =
    Bug Reports=https://github.com/mikepqr/tidytwitter/issues
    Source=https://github.com/mikepqr/tidytwitter

[options]
package_dir = =src
packages = find:
python_requires = >=3.6
install_requires =
    tweepy<4.0.0
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tidytwitter=tidytwitter.tidytwitter:main
